syntax="proto2";

package cache;

message BuildingCache
{
	required int64 uid = 1;
	required int32 scheme_id = 2;
	required int32 lv = 3;
}